Finished Swagger Documentation
