# controllers/note.go
@@ -9,18 +9,24 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
+// swagger:model
 type NoteInput struct {
 	Title   string `json:"title" binding:"required,min=3,max=30"`
 	Text    string `json:"text" binding:"required"`
 	GroupId int    `json:"groupId" binding:"required"`
 }
 
+// swagger:model
 type NoteUpdateInput struct {
 	Id    int    `json:"id" binding:"required"`
 	Title string `json:"title" binding:"required,min=3,max=30"`
 	Text  string `json:"text" binding:"required"`
 }
 
+// @Summary Delete a note
+// @Param id query string true "Note Delete Query"
+// @Tags Note
+// @Router /note/delete   [delete]
 func DeleteNote(c *gin.Context) {
 	id, err := c.GetQuery("id")
 
@@ -40,6 +46,11 @@ func DeleteNote(c *gin.Context) {
 	c.JSON(http.StatusOK, gin.H{"message": "Note Deleted!"})
 }
 
+// @Summary Update data of a note
+// @Description  !!! Insert all the values even if they are not new
+// @Tags Note
+// @Param note body NoteUpdateInput true "Note Update JSON"
+// @Router /note/update [put]
 func UpdateNote(c *gin.Context) {
 	var input NoteUpdateInput
 
@@ -63,6 +74,11 @@ func UpdateNote(c *gin.Context) {
 	c.JSON(http.StatusOK, gin.H{"message": "Note Updated!"})
 }
 
+// @Summary Create a note
+// @Description Create New Note
+// @Tags Note
+// @Param note body NoteInput true "Note Create JSON"
+// @Router /note/create [post]
 func CreateNote(c *gin.Context) {
 	uid, err := token.ExtractTokenID(c)
 
@@ -96,6 +112,9 @@ func CreateNote(c *gin.Context) {
 
 }
 
+// @Summary Get note for user
+// @Tags Note
+// @Router /note [get]
 func GetNote(c *gin.Context) {
 	// get group id
 	id, errg := c.GetQuery("id")
